--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mycompany</groupId>
-  <artifactId>camel-test-spring</artifactId>
+  <groupId>org.jboss.fuse.workshop</groupId>
+  <artifactId>currency</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
-  <name>Fuse on EAP Camel Spring Application</name>
-  <description>Fuse on EAP Camel Example using Spring</description>
+
+  <name>Fuse on EAP Camel Currency App</name>
+  <description>Fuse on EAP Camel Currency App</description>
+
   <properties>
+    <jboss.fuse.bom.version>6.3.0.redhat-187</jboss.fuse.bom.version>
     <version.maven.compiler.plugin>3.5.1</version.maven.compiler.plugin>
     <jboss.home>${env.JBOSS_HOME}</jboss.home>
     <version.maven.surefire.plugin>2.19.1</version.maven.surefire.plugin>
@@ -16,15 +20,21 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <version.jboss.bom.eap>6.4.10.GA</version.jboss.bom.eap>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <camel.version>2.17.0.redhat-630187</camel.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
-    <version.junit>4.11</version.junit>
     <maven.compiler.source>1.8</maven.compiler.source>
     <version.maven.war.plugin>2.5</version.maven.war.plugin>
   </properties>
+
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.jboss.fuse.bom</groupId>
+        <artifactId>jboss-fuse-parent</artifactId>
+        <version>${jboss.fuse.bom.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>org.jboss.bom.eap</groupId>
         <artifactId>jboss-javaee-6.0-with-tools</artifactId>
@@ -34,29 +44,47 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
   <dependencies>
+    <!-- camel dependencies -->
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
-      <version>2.17.0.redhat-630187</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-servlet</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-sql</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <!-- if we want to use servlet api (annotation @WebServlet for instance) -->
     <dependency>
       <groupId>org.jboss.spec.javax.servlet</groupId>
       <artifactId>jboss-servlet-api_3.0_spec</artifactId>
       <scope>provided</scope>
     </dependency>
+    <!-- in case we're goint go write unit tests -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- we'd want tests to run inside EAP (with Arquillian test runner) -->
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+
+  <!-- add set of red hat maven repositories - *.redhat builds aren't published 
+    to maven central -->
   <repositories>
     <repository>
       <releases>
@@ -99,6 +127,8 @@
       <url>https://repo.fusesource.com/nexus/content/groups/ea</url>
     </repository>
   </repositories>
+
+  <!-- we might need also some *.redhat maven plugins -->
   <pluginRepositories>
     <pluginRepository>
       <releases>
@@ -141,6 +171,7 @@
       <url>https://repo.fusesource.com/nexus/content/groups/ea</url>
     </pluginRepository>
   </pluginRepositories>
+
   <build>
     <testResources>
       <testResource>
@@ -176,6 +207,7 @@
       </plugin>
     </plugins>
   </build>
+
   <profiles>
     <profile>
       <activation>
