--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 
   <properties>
     <jboss.fuse.bom.version>6.3.0.redhat-187</jboss.fuse.bom.version>
+    <wildfly.camel.version>2.4.0.redhat-630187</wildfly.camel.version>
     <version.maven.compiler.plugin>3.5.1</version.maven.compiler.plugin>
-    <jboss.home>${env.JBOSS_HOME}</jboss.home>
     <version.maven.surefire.plugin>2.19.1</version.maven.surefire.plugin>
     <server.config>standalone.xml</server.config>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -36,8 +36,8 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>org.jboss.bom.eap</groupId>
-        <artifactId>jboss-javaee-6.0-with-tools</artifactId>
+        <groupId>org.jboss.bom</groupId>
+        <artifactId>eap6-supported-artifacts</artifactId>
         <version>${version.jboss.bom.eap}</version>
         <type>pom</type>
         <scope>import</scope>
@@ -60,6 +60,12 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-sql</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.wildfly.camel</groupId>
+      <artifactId>wildfly-camel-subsystem</artifactId>
+      <version>${wildfly.camel.version}</version>
       <scope>provided</scope>
     </dependency>
     <!-- if we want to use servlet api (annotation @WebServlet for instance) -->
@@ -173,12 +179,6 @@
   </pluginRepositories>
 
   <build>
-    <testResources>
-      <testResource>
-        <filtering>true</filtering>
-        <directory>src/test/resources</directory>
-      </testResource>
-    </testResources>
     <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
@@ -205,45 +205,55 @@
           <port>9999</port>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${version.maven.surefire.plugin}</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
   <profiles>
     <profile>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${version.maven.surefire.plugin}</version>
-            <configuration>
-              <skip>true</skip>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>arq-managed</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.as</groupId>
-          <artifactId>jboss-as-arquillian-container-managed</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>arq-remote</id>
+      <id>it</id>
       <dependencies>
         <dependency>
           <groupId>org.jboss.as</groupId>
           <artifactId>jboss-as-arquillian-container-remote</artifactId>
+          <version>7.2.0.Final</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.camel</groupId>
+          <artifactId>wildfly-camel-testenricher</artifactId>
+          <version>${wildfly.camel.version}</version>
           <scope>test</scope>
         </dependency>
       </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>${version.maven.surefire.plugin}</version>
+            <configuration>
+              <systemPropertyVariables>
+                <arquillian.deploymentExportPath>target/deployments</arquillian.deploymentExportPath>
+              </systemPropertyVariables>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
